# Journey2Rich

./: .env.example  .gitignore  README.md  pyproject.toml
src/journey2rich/: __init__.py  config.py
src/journey2rich/backtest/: simple_backtest.py
src/journey2rich/broker/: ibkr.py
src/journey2rich/data/: __init__.py  fundamentals.py  options.py  prices.py  providers.py
src/journey2rich/engine/: llm.py  llm_types.py  news.py  options.py  paper.py  push.py  report.py  runner.py  scheduler.py  watchlist.py
src/journey2rich/strategies/: fundamental_quality.py
